--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ rsbullet = "0.3.2"
 roplat_rerun = "0.1.1"
 anyhow = "1.0.100"
 nalgebra = "0.34.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
